--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ requires-python = ">=3.9"
 dependencies = [
     "opencv-python>=4.12.0.88",
     "pyqt6>=6.10.0",
+    "scikit-learn>=1.6.1",
+    "xgboost>=2.1.4",
 ]
 
 [tool.setuptools]
