--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 requires-python = ">=3.9"
 dependencies = [
     "opencv-python>=4.12.0.88",
+    "pydantic>=2.12.3",
     "pyqt6>=6.10.0",
     "scikit-learn>=1.6.1",
     "xgboost>=2.1.4",
