--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "video_distortion"
 version = "0.1.0"
 requires-python = ">=3.9"
 dependencies = [
+    "mlflow>=3.1.4",
     "opencv-python>=4.12.0.88",
     "pydantic>=2.12.3",
     "pyqt6>=6.10.0",
